first attempt commit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>LEZZ G000.....</h1>
     <script >
-    
+        console.log("Hello World");
+        document.write("Learn React");
+        
      </script>
 </body>
 </html>
