--- a/variables.html
+++ b/variables.html
@@ -9,8 +9,8 @@
 <body>
     <p id="details"></p>
     <script>
-    let name="Saransh"; 
-    const age= "35";
+    let name="Saransh"; //creating the variable name
+    const age= "35"; //constant varibale
     document.getElementById("details").innerHTML=name;
     console.log(name);
     console.log(age);
