Learning and creating oblects

--- a/objects.html
+++ b/objects.html
@@ -10,7 +10,7 @@
     <script>
       let tv={Brand:"Sony",color:"Black",cost:45000,size:"medium",
       fullName: function(){
-          return this.Brand + "Led" + this.size;
+          return this.Brand + " LED " + this.size;
 
     }};//syntax to create objects
       console.log(tv.fullName());
